# titanic-analysis

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  release_template.md  requirements.txt
.github/: CODEOWNERS  admin_pull_request_template.yaml  dependabot.yaml
.github/ISSUE_TEMPLATE/: common_issue.yaml
.github/PULL_REQUEST_TEMPLATE/: admin.md
.github/workflows/: release.yaml
config/model/: base.yaml  base_gbdt.yaml  base_logreg.yaml  base_pytorch.yaml  base_xgboost.yaml
notebook/: main.ipynb  main_notebook.ipynb
src/titanic_analysis/: __init__.py  main.py  version.py
src/titanic_analysis/application/: analysis.py  constants.py  prediction.py  preprocess.py  service.py  train.py  types.py
src/titanic_analysis/application/analysis/: analyzer.py  service.py
src/titanic_analysis/application/train/: sklearn_model.py  torch_model.py  utils.py  xgboost_model.py
src/titanic_analysis/domain/dataset/: dataset.py  sklearn_dataset.py  torch_dataset.py
src/titanic_analysis/domain/model/: torch.py  types.py
src/titanic_analysis/framework/log/: constants.py  utils.py
src/titanic_analysis/infrastructure/io/: constants.py  io_utils.py  utils.py
src/titanic_analysis/infrastructure/io/analysis/: base.yaml  config_loader.py  constants.py  dto.py
src/titanic_analysis/infrastructure/io/training_pipeline/: base.yaml  config_loader.py  constants.py  dto.py
src/titanic_analysis/infrastructure/logic/analysis/: analyzer.py  display.py
src/titanic_analysis/infrastructure/logic/preprocess/: preprocessor.py
src/titanic_analysis/infrastructure/user/: constants.py  parser.py
src/titanic_analysis/interface/: utils.py
src/titanic_analysis/interface/log/: logger.py  utils.py
src/titanic_analysis/usecase/analysis/: analyzer.py  constants.py  service.py  utils.py
src/titanic_analysis/usecase/exception/: exception.py
src/titanic_analysis/usecase/preprocess/: constants.py  preprocessor.py
