[project]
name = "titanic-analysis"
version = "0.2.2"
description = "Titanic dataset analysis repository"
readme = "README.md"
license = { file = "LICENSE"}
authors = [{ name = "Minplu"}]
keywords = ["titanic", "analysis"]
requires-python = ">=3.13"
urls = { repository = "https://github.com/Min-prog000/titanic-analysis" }
dependencies = [
    "ipykernel>=7.1.0",
    "nbstripout>=0.8.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
titanic-analysis = "titanic_analysis.main:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "D400", "D415"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.uv-build]
version-source = "titanic_analysis.version:__version__"
package-dir = "src"

[tool.uv.sources]
titanic-analysis = { workspace = true }

[tool.ruff.lint.pydocstyle]
convention = "google"
